fixed scrollbar in print stickers

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -456,3 +456,8 @@ textarea {
     background-color: rgb(250, 250, 250);
   }
 }
+.mat-drawer-content1 {
+  @media print {
+    overflow: hidden;
+  }
+}
